# colonel-white

./: .gitignore  Makefile  README.md  gae.md  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  post-create.sh
.github/workflows/: build-docker-image.yml
content/md/: dummy_report.md
content/tex/: dummy.bib  dummy_report.tex  letter.tex
docs/: index.md  mkdocs.yml
notebooks/: 2025_03_26_dummy.ipynb  dummy.ipynb
reports/2025_03_26_dummy/: dummy_report.tex
src/midgard/: __init__.py  config.py
tests/helpers/: file_finder_service_test.py
