[project]
name = "midgard"
version = "0.0.1"
description = "LaTeX report writing."
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.12"
dependencies = [
    "debugpy",
    "ipykernel",
    "ipympl",
    "matplotlib",
    "matplotlib",
    "nbconvert",
    "numpy",
    "pytest",
    "ruff",
]
[project.urls]
repository = "https://github.com/earthroverprogram/midgard"

[tool.pytest.ini_options]
log_cli = false
addopts = ["-q", "--disable-warnings", "--cache-clear"]
testpaths = ["./tests"]

[tool.ruff]
lint.select = ["F", "E", "W", "C90", "I", "PL", "D"]
lint.ignore = ["D203", "D213"]
lint.fixable = ["ALL"]
line-length = 88

[[tool.mypy.overrides]]
module = ["midgard.*"]
follow_untyped_imports = true

[tool.pyright]
exclude = ["**/__pycache__"]
reportMissingImports = true
reportMissingTypeStubs = false
pythonVersion = "3.13"
pythonPlatform = "Linux"